Fix Settings GUI and App Nap

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -235,6 +235,7 @@ if (APPLE)
     src/components/core/event-count-notifier/EventCountNotifierMacOs.m
     src/components/other/desktop-tools/DesktopToolsMacOs.cpp
     src/components/other/desktop-tools/screen-saver/ScreenSaverMacOs.m
+    src/components/other/desktop-tools/state-process/StateProcessMacOs.mm
   )
   list(APPEND HEADERS
     src/app/single-application/SingleApplicationPrivate.hpp
@@ -326,6 +327,15 @@ execute_process(COMMAND ${CMAKE_COMMAND} -E copy
   "${CMAKE_CURRENT_SOURCE_DIR}/tools/private/pre-commit"
   "${CMAKE_CURRENT_SOURCE_DIR}/.git/hooks/pre-commit"
 )
+set(_QML_IMPORT_PATHS "")
+list(APPEND _QML_IMPORT_PATHS "${CMAKE_CURRENT_SOURCE_DIR}/ui/modules")
+list(APPEND _QML_IMPORT_PATHS "${CMAKE_CURRENT_SOURCE_DIR}/ui/dev-modules")
+list(APPEND _QML_IMPORT_PATHS "${CMAKE_CURRENT_SOURCE_DIR}/ui/scripts")
+list(APPEND _QML_IMPORT_PATHS "${CMAKE_CURRENT_SOURCE_DIR}/ui/views")
+
+
+set(QML_IMPORT_PATH ${_QML_IMPORT_PATHS} CACHE STRING "Path used to locate CMake modules by Qt Creator" FORCE)
+
 
 # ------------------------------------------------------------------------------
 # Create config.h file
@@ -432,7 +442,7 @@ if (UNIX AND NOT APPLE)
     RENAME "${EXECUTABLE_NAME}.svg"
   )
 
-  set(ICON_DIRS 16x16 22x22 24x24 32x32 64x64 128x128)
+  set(ICON_DIRS 16x16 22x22 24x24 32x32 64x64 128x128 256x256)
   foreach (DIR ${ICON_DIRS})
     install(FILES "${ASSETS_DIR}/icons/hicolor/${DIR}/apps/icon.png"
       DESTINATION "${CMAKE_INSTALL_DATADIR}/icons/hicolor/${DIR}/apps/"
