--- a/cmake_builder/linphone_package/CMakeLists.txt
+++ b/cmake_builder/linphone_package/CMakeLists.txt
@@ -71,9 +71,15 @@ file(GLOB MINIZIP_FILES "${CMAKE_SOURCE_DIR}/submodules/externals/minizip/build-
 file(COPY ${MINIZIP_FILES} DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/desktop/")
 if(APPLE)
     execute_process(COMMAND install_name_tool -id "@executable_path/../Frameworks/libminizip.dylib" "${CMAKE_CURRENT_BINARY_DIR}/desktop/lib/libminizip.dylib")
+elseif(NOT WIN32)
+    
 endif()
 file(RENAME "${CMAKE_CURRENT_BINARY_DIR}/desktop" "${LINPHONE_SDK_TMP}")
-target_link_libraries(${TARGET_NAME} "${LINPHONE_SDK_TMP}/lib/libminizip.dylib")
+if(APPLE)
+    target_link_libraries(${TARGET_NAME} "${LINPHONE_SDK_TMP}/lib/libminizip.dylib")
+elseif(NOT WIN32)
+    target_link_libraries(${TARGET_NAME} "${LINPHONE_SDK_TMP}/lib64/libminizip.so")
+endif()
 # Generates a zip archive containing the development files.
 macro (add_sdk_list_file NAME)
   configure_file("${CMAKE_CURRENT_SOURCE_DIR}/sdk_content/${NAME}.list.in" "${LINPHONE_SDK_TMP}/${NAME}.list" @ONLY)
@@ -268,6 +274,15 @@ elseif (APPLE)
 
 #  configure_file("${CMAKE_CURRENT_SOURCE_DIR}/macos/packaging.cmake.in" "packaging.cmake" @ONLY)
 #  install(SCRIPT "${CMAKE_CURRENT_BINARY_DIR}/packaging.cmake")
+else()
+    foreach (LIBRARY ${SHARED_LIBRARIES})
+    get_filename_component(LIBRARY_FILENAME ${LIBRARY} NAME)
+    #if(NOT ("${LIBRARY_FILENAME}" STREQUAL "libminizip.dylib"))
+      message("Changing RPATH of ${LIBRARY_FILENAME} from '${LINPHONE_OUTPUT_DIR}/lib' to '@executable_path/../lib'")
+      execute_process(COMMAND install_name_tool -rpath "${LINPHONE_OUTPUT_DIR}/lib" "@executable_path/../lib" "${LIBRARY}")
+      execute_process(COMMAND install_name_tool -rpath "${LINPHONE_OUTPUT_DIR}/lib" "@executable_path/../lib64" "${LIBRARY}")
+    #endif()
+  endforeach ()
 endif ()
 
 if (MSVC)
