CMakeLists Fix for linux and Windows (Libraries)

--- a/cmake_builder/linphone_package/CMakeLists.txt
+++ b/cmake_builder/linphone_package/CMakeLists.txt
@@ -183,7 +183,17 @@ if (WIN32)
 	install( CODE "execute_process(COMMAND windeployqt ${LINPHONE_OUTPUT_DIR}/bin/${EXECUTABLE_NAME}.exe --qmldir=${LINPHONE_QML_DIR})")# -verbose=2)" )
 
 	file(GLOB LIB_FILES "${LINPHONE_SDK_TMP}/lib/*.dll")
-	install(FILES ${LIB_FILES} DESTINATION "bin")
+	install(FILES ${LIB_FILES} DESTINATION "bin/")
+	file(GLOB LIB_FILES "${LINPHONE_SDK_TMP}/bin/*.dll")
+	install(FILES ${LIB_FILES} DESTINATION "bin/")
+	file(GLOB EXE_FILES "${LINPHONE_SDK_TMP}/bin/*.exe")
+	install(FILES ${EXE_FILES} DESTINATION "bin/")
+	if (EXISTS "${LINPHONE_SDK_TMP}/lib/mediastreamer")
+		install(DIRECTORY "${LINPHONE_SDK_TMP}/lib/mediastreamer" DESTINATION "lib" USE_SOURCE_PERMISSIONS)
+	endif ()
+	install(DIRECTORY "${LINPHONE_SDK_TMP}/share/images" DESTINATION "share" USE_SOURCE_PERMISSIONS)
+	install(DIRECTORY "${LINPHONE_SDK_TMP}/share/sounds" DESTINATION "share" USE_SOURCE_PERMISSIONS)
+	
 #  list(REMOVE_ITEM SHARE_CONTENT "share/belr" "share/Belr" "share/images" "share/${APPLICATION_NAME}" "share/${APPLICATION_NAME}" "share/sounds")
 #  foreach (ITEM IN LISTS SHARE_CONTENT)
 #    list(APPEND SHARE_CONTENT_EXCLUDE PATTERN "${ITEM}" EXCLUDE)
@@ -262,17 +272,17 @@ else()# Not Windows and Apple
   if( EXISTS "${LINPHONE_SDK_TMP}/lib64/")
 	install(DIRECTORY "${LINPHONE_SDK_TMP}/lib64/" DESTINATION "lib64" USE_SOURCE_PERMISSIONS)
   endif()
-  install(DIRECTORY "${LINPHONE_SDK_TMP}/share/" DESTINATION "share" USE_SOURCE_PERMISSIONS)
+  install(DIRECTORY "${LINPHONE_SDK_TMP}/share/" DESTINATION "." USE_SOURCE_PERMISSIONS)
   #install(PROGRAMS "${CMAKE_INSTALL_PREFIX}/bin/${EXECUTABLE_NAME}" DESTINATION "/bin")
 
 
-  if (EXISTS "${LINPHONE_OUTPUT_DIR}/lib/mediastreamer")
-    file(COPY "${LINPHONE_OUTPUT_DIR}/lib/mediastreamer" DESTINATION "lib" USE_SOURCE_PERMISSIONS)
+  if (EXISTS "${LINPHONE_SDK_TMP}/lib/mediastreamer")
+    file(COPY "${LINPHONE_SDK_TMP}/lib/mediastreamer" DESTINATION "lib" USE_SOURCE_PERMISSIONS)
   endif ()
   install(FILES "${LINPHONE_SDK_TMP}/share/belr/grammars/cpim_grammar" DESTINATION "share/belr/grammars/")
   install(FILES "${LINPHONE_SDK_TMP}/share/belr/grammars/vcard_grammar" DESTINATION "share/belr/grammars/")
-  install(DIRECTORY "${LINPHONE_SDK_TMP}/share/images" DESTINATION "share" USE_SOURCE_PERMISSIONS)
-  install(DIRECTORY "${LINPHONE_SDK_TMP}/share/sounds" DESTINATION "share" USE_SOURCE_PERMISSIONS)
+#  install(DIRECTORY "${LINPHONE_SDK_TMP}/share/images" DESTINATION "share" USE_SOURCE_PERMISSIONS)
+#  install(DIRECTORY "${LINPHONE_SDK_TMP}/share/sounds" DESTINATION "share" USE_SOURCE_PERMISSIONS)
   #install(FILES "${LINPHONE_SDK_TMP}/share/${APPLICATION_NAME}/rootca.pem" DESTINATION "share/${APPLICATION_NAME}")
   install(FILES "${LINPHONE_SDK_TMP}/share/${EXECUTABLE_NAME}/rootca.pem" DESTINATION "share/${APPLICATION_NAME}")	#We use executable_name because of name folder that is not harmonized from the SDK
 #  install(FILES "${LINPHONE_OUTPUT_DIR}/share/${APPLICATION_NAME}/linphonerc-factory" DESTINATION "share/${APPLICATION_NAME}")
